--- a/accueil.css
+++ b/accueil.css
@@ -1,8 +1,19 @@
-h3,h4,h5,h6 {
+h3,
+h4,
+h5,
+h6 {
     text-decoration: underline;
 }
 
 body {
     /*font-family: monospace;*/
     background: #256A6A;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow-x: hidden;
 }
