--- a/emplois.css
+++ b/emplois.css
@@ -6,13 +6,21 @@ body {
 #emp {
     border-radius: 10%;
     width: 100%;
-    height: 30%; 
+    height: 30%;
 }
 
 #annonce {
-    height:500px; 
+    height: 500px;
 }
 
 #white {
-    color : white;
+    color: white;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow-x: hidden;
 }
