--- a/accueil.css
+++ b/accueil.css
@@ -17,3 +17,15 @@ body {
     margin: 0px;
     overflow-x: hidden;
 }
+
+tr {
+    padding: 0.3em;
+}
+
+.post {
+    border: 2px solid #256A6A;
+    border-radius: 3%;
+    padding: 1em;
+    font-size: 1.2em;
+    text-align: left;
+}
