--- a/notifications.css
+++ b/notifications.css
@@ -4,18 +4,18 @@ body {
     text-align: left;
 }
 
-#emp {
-    border-radius: 10%;
+#img {
     width: 100%;
-    height: 30%; 
+    height: 70%; 
 }
+
+
 
 h3 {
     text-align: center;
 }
 
 h6 {
-    color: rgb(123, 0, 255);
     font-weight: bold;
 }
 
