--- a/accueil.css
+++ b/accueil.css
@@ -28,9 +28,10 @@ tr {
     padding: 1em;
     font-size: 1.2em;
     text-align: left;
+    padding-bottom: 0px;
 }
 
 #imgg {
     width: 100%;
-    height: 30%; 
+    height: 30%;
 }
